# rnpt

./: .gitignore  Cargo.toml  README.md
assets/: cornell.glb
crates/bench-report/: Cargo.toml
crates/bench-report/src/: main.rs
crates/oxyde/: Cargo.toml
crates/oxyde-gui/: Cargo.toml
crates/oxyde-gui/src/: asset_importer.rs  main.rs
crates/oxyde/src/: lib.rs
crates/rnpt/: Cargo.toml
crates/rnpt-bench/: Cargo.toml  build.rs
crates/rnpt-bench/benches/: bvh.rs
crates/rnpt-bvh/: Cargo.toml
crates/rnpt-bvh-embree/: Cargo.toml  build.rs
crates/rnpt-bvh-embree/src/: lib.rs
crates/rnpt-bvh-embree/tests/: bvh.rs
crates/rnpt-bvh/src/: builder.rs  bvh.rs  lib.rs  math.rs
crates/rnpt-bvh/tests/: bvh.rs
crates/rnpt-gui/: Cargo.toml
crates/rnpt-gui/src/: app.rs  asset_importer.rs  camera_nav.rs  main.rs  tonemap.rs  viewport.rs
crates/rnpt-gui/src/panels/: camera.rs  environment.rs  mod.rs  nirc.rs  post.rs  render.rs  scene.rs  stats.rs
crates/rnpt/src/: brdf.rs  bvh.rs  bvh_builder.rs  distribution.rs  emitters.rs  glass.rs  lib.rs  light.rs  material.rs  math.rs  microfacet.rs  nirc.rs  nrc.rs  parallel_tracer.rs  pcg32.rs  reservoir.rs  scene.rs  tracer.rs
crates/rnpt/src/nirc/: encoding.rs  mlp.rs  mod.rs  optimizer.rs  ring.rs  trainer.rs
crates/rnpt/src/tests/: brdf.rs  bvh.rs  mis.rs  mod.rs  nirc.rs
crates/rnpt/tests/: bvh.rs
scripts/: bench_summary.ps1
