[package]
name = "rnpt-gui"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe = "0.28.1"
rayon = "1.10"
nalgebra = "0.33"
gltf = { version = "1.4", features = ["KHR_lights_punctual", "KHR_materials_emissive_strength"] }
image = { version = "0.25", default-features = false, features = ["hdr"] }
rnpt = { path = "../rnpt" }
